	  zipscript: remove: config setting - disable_zip_update
	  zipscript: remove: config setting - disable_zip_halfway
	  zipscript: remove: config setting - disable_zip_newleader
	  zipscript: remove: config setting - disable_zip_complete
	  zipscript: remove: config setting - disable_zip_norace_halfway
	  zipscript: remove: config setting - disable_zip_norace_complete


v1.00	: Initial release

PZS-NG CHANGELOG
----------------

v0.6.1	--> 1.00  :
	The changes from the original project-zs by d1 was
	significant. There is nearly no code that has not been
	changed. For a full list of new/changed options, i
	suggest you read README.ZSCONFIG for the zipscript, and
	look at the README for the sitebot. Sitewho has also
	changed a lot and have been given a few new options, so
	check the sitebot.conf and the README.

		----	Changes in the zipscript:

			New config options:
			-------------------
			- dupepath
			- noforce_sfv_first_dirs
			- use_partial_on_noforce
			- audio_nocheck_dirs
			- rescan_nocheck_dirs_allowed
			- strict_path_match
			- sfv_calc_single_fname
			- subdir_list
			- gl_sections
			- short_sitename
			- allowed_types_exemption_dirs
			- check_for_missing_nfo_dirs
			- check_for_missing_nfo_filetypes
			- create_incomplete_links_in_group_dirs
			- days_back_cleanup
			- cleanupdirs_dated
			- always_scan_audio_syms
			- write_complete_message_in_group_dirs
			- hide_group_uploaders
			- hide_gname
			- hide_uname
			- custom_group_dirs_complete_message
			- userellink
			- allow_files_not_in_sfv
			- strict_sfv_check
			- mark_file_as_bad
			- allow_file_resume
			- sleep_on_bad
			- debug_altlog
			- debug_announce
			- ignore_zero_size
			- ignore_zero_size_on_rescan
			- remove_dot_debug_on_delete
			- remove_dot_files_on_delete
			- unzip_bin
			- sfv_cleanup_lowercase
			- sfv_cleanup_crlf
			- deny_double_sfv
			- deny_double_nfo
			- audio_group_sort
			- audio_group_path
			- audio_cbr_check
			- audio_cbr_warn
			- audio_year_warn